// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен плюсовать offset к top-сдвигу 1`] = `
<div
  className="Sticky__container"
  style={
    Object {
      "top": 138,
      "zIndex": undefined,
    }
  }
>
  <div>
    foo
  </div>
</div>
`;

exports[`должен проставлять правильное значение top-сдвига на высоту хэдера 1`] = `
<div
  className="Sticky__container"
  style={
    Object {
      "top": 44,
      "zIndex": undefined,
    }
  }
>
  <div>
    foo
  </div>
</div>
`;

exports[`должен проставлять правильное значение top-сдвига при открытой форме поиска 1`] = `
<div
  className="Sticky__container"
  style={
    Object {
      "top": 113,
      "zIndex": undefined,
    }
  }
>
  <div>
    foo
  </div>
</div>
`;
